apps/base/media/jfa-go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jfa-go
spec:
  selector:
    app: jfa-go
  ports:
    - port: 8056
      targetPort: 8056
  type: ClusterIP
