apps/base/media/jfa-go/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jfa-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: jfa-go.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jfa-go
            port:
              number: 8056
